# language-memorizer

./: CHANGELOG.md  LICENSE  README.md  default.nix  env.nix  index.html  language-memorizer.cabal  nontouchscreen.html  shell.nix  touchscreen.html
client/: client.cabal
client/src/: Utils.hs
client/src/Mains/: Nontouchscreen.hs  Touchscreen.hs
client/src/Model/: Action.hs  Model.hs  UpdateModel.hs
client/src/Views/Dumb/ActivePage/: Nontouchscreen.sass
client/src/Views/Dumb/Button/: Common.sass
client/src/Views/Dumb/Form/: Common.sass  Nontouchscreen.sass
client/src/Views/Dumb/Home/: Common.sass
client/src/Views/Dumb/Menu/: Common.hs
client/src/Views/Dumb/Providing/Footer/: Common.sass
client/src/Views/Dumb/Providing/Header/: Common.hs
client/src/Views/Dumb/Providing/Root/: Common.sass  Nontouchscreen.hs  Nontouchscreen.sass  Touchscreen.hs
client/src/Views/Smart/Avatar/: Common.hs
client/src/Views/Smart/Memorizing/: Common.hs  Common.sass  Nontouchscreen.sass
client/src/Views/Smart/PageSwitcher/: Common.sass
client/src/Views/Smart/Router/: Common.hs  Utils.hs
client/src/Views/Smart/Set/: Common.hs  Common.sass  Nontouchscreen.sass
client/src/Views/Smart/Sets/: Common.hs  Common.sass  Nontouchscreen.sass
client/src/Views/Smart/Settings/: Common.hs
client/src/Views/Smart/SignIn/: Common.hs  Common.sass  Nontouchscreen.sass
client/src/Views/Smart/SignUp/: Common.hs  Common.sass  Nontouchscreen.sass
client/src/Views/Smart/Statistics/: Common.hs  Nontouchscreen.sass
common/: common.cabal
common/src/: Common.hs
server/: init-db.sql  server.cabal
server/src/: Core.hs  Main.hs
server/src/Adapters/: PostgreSQL.hs  Servant.hs
server/src/Ports/: Database.hs  WwwServer.hs
src/: Utils.hs
src/Mains/: Nontouchscreen.hs  Touchscreen.hs
src/Model/: Action.hs  Model.hs  UpdateModel.hs
src/Views/Dumb/ActivePage/: Common.hs  Touchscreen.sass
src/Views/Dumb/Button/: Common.sass
src/Views/Dumb/Footer/: Common.hs  Common.sass
(+36 files in other folders)
