cabal-version:      >=1.10
name:               client
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             monadosquito
maintainer:         monadosquito@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

executable nontouchscreen
  main-is: Mains/Nontouchscreen.hs
  build-depends: aeson, base, common, directory, lens, jsaddle, miso, servant
  if !impl(ghcjs)
    build-depends:
      hsass, jsaddle-warp, transformers, websockets
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -main-is Nontouchscreen

executable touchscreen
  main-is: Mains/Touchscreen.hs
  build-depends: aeson, base, common, directory, lens, jsaddle, miso, servant
  if !impl(ghcjs)
    build-depends:
      hsass, jsaddle-warp, transformers, websockets
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -main-is Touchscreen
