cabal-version:      >=1.10
name:               common
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             monadosquito
maintainer:         monadosquito@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Common
  build-depends:    aeson, base
  hs-source-dirs:   src
  default-language: Haskell2010
