cabal-version:      >=1.10
name:               server
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             monadosquito
maintainer:         monadosquito@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

executable server
  main-is: Main.hs
  build-depends:
      aeson
    , base, bytestring
    , case-insensitive
    , postgresql-simple
    , servant, servant-auth-server, servant-server
    , utf8-string
    , wai-cors, warp
  hs-source-dirs: src
  default-language: Haskell2010
